tests/should-fail/rawcodes/rawcodelit-10.j
globals
    integer n = '\\ab'
endglobals